syntax = "proto3";

option csharp_namespace = "GrpcServiceTranscoding";
import "Protos/google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service Encounter {
    /* rpc GetAllEncounters(GetAllEncountersRequest) returns (GetAllEncountersResponse) {
        option (google.api.http) = {
            get: "/api/encounters"
            body: "*"
        };
    }

    rpc CreateWholeHiddenLocationEncounter(CreateWholeHiddenLocationEncounterRequest) returns (CreateWholeHiddenLocationEncounterResponse) {
        option (google.api.http) = {
            post: "/api/encounters/createWholeHiddenLocationEncounter"
            body: "*"
        };
    }
    */

    rpc CreateSocialEncounter(WholeSocialEncounterMongoDto) returns (WholeSocialEncounterMongoDto){
        option (google.api.http) = {
            post: "/api/encounters/social"
            body: "*"
        };
    }
}

/*
message GetAllEncountersRequest {
    int32 page = 1;
    int32 pageSize = 2;
}

message GetAllEncountersResponse {
    repeated EncounterMongoDto encounters = 1;
    int32 totalItems = 2;
}

message EncounterMongoDto {
    string id = 1;
    string name = 2;
    string description = 3;
    int32 xp_points = 4;
    string status = 5;
    string type = 6;
    double latitude = 7;
    double longitude = 8;
    bool should_be_approved = 9;
}
*/

/*
message HiddenLocationEncounterMongoDto {
    string id = 1;
    EncounterMongoDto encounter = 2;
    string image_url = 3;
    double image_latitude = 4;
    double image_longitude = 5;
    double distance_treshold = 6;
}

message CreateWholeHiddenLocationEncounterRequest {
    string name = 1;
    string description = 2;
    int32 xp_points = 3;
    string status = 4;
    string type = 5;
    double latitude = 6;
    double longitude = 7;
    bool should_be_approved = 8;
    double image_latitude = 9;
    double image_longitude = 10;
    string image_url = 11;
    double distance_treshold = 12;
}

message CreateWholeHiddenLocationEncounterResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    int32 xp_points = 4;
    string status = 5;
    string type = 6;
    double latitude = 7;
    double longitude = 8;
    bool should_be_approved = 9;
    double image_latitude = 10;
    double image_longitude = 11;
    string image_url = 12;
    double distance_treshold = 13;
}
*/

message WholeSocialEncounterMongoDto {
        string EncounterId = 1;
        string Name = 2;
        string Description = 3;
        int32 XpPoints = 4;
        string Status = 5;
        string Type = 6;
        double Latitude = 7;
        double Longitude = 8;
        string Id = 9;
        int32 TouristsRequiredForCompletion = 10;
        double DistanceTreshold = 11;
        repeated int64 TouristIDs = 12;
        bool ShouldBeApproved = 13;
}